# agentproof

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/: manage.py  pyproject.toml
backend/src/agentproof_backend/: __init__.py
backend/src/agentproof_backend/apps/accounts/: admin.py  apps.py  forms.py  managers.py  models.py
backend/src/agentproof_backend/apps/accounts/migrations/: 0001_initial.py  0002_alter_user_managers.py
backend/src/agentproof_backend/apps/api_keys/: __init__.py  admin.py  api.py  apps.py  authentication.py  exceptions.py  models.py  schema.py  selectors.py  serializers.py  services.py  tasks.py  throttles.py  urls.py
backend/src/agentproof_backend/apps/api_keys/migrations/: 0001_initial.py
backend/src/agentproof_backend/apps/audit/: admin.py  apps.py  context.py  models.py  services.py
backend/src/agentproof_backend/apps/audit/migrations/: 0001_initial.py
backend/src/agentproof_backend/apps/common/: api.py  apps.py  exceptions.py  middleware.py  models.py  type_utils.py  views.py
backend/src/agentproof_backend/apps/datasets/: __init__.py  admin.py  apps.py  exceptions.py  forms.py  models.py  selectors.py  services.py  tasks.py  web.py  web_urls.py
backend/src/agentproof_backend/apps/datasets/migrations/: 0001_initial.py  0002_alter_datasetversion_dataset_and_more.py  __init__.py
backend/src/agentproof_backend/apps/ingestion/: admin.py  api.py  apps.py  exceptions.py  models.py  redaction.py  serializers.py  services.py  tasks.py  urls.py
backend/src/agentproof_backend/apps/ingestion/migrations/: 0001_initial.py
backend/src/agentproof_backend/apps/organizations/: admin.py  api.py  apps.py  constants.py  emails.py  exceptions.py  middleware.py  models.py  permissions.py  selectors.py  serializers.py  services.py  urls.py
backend/src/agentproof_backend/apps/organizations/migrations/: 0001_initial.py
backend/src/agentproof_backend/apps/organizations/templates/emails/: organization_invitation.txt
backend/src/agentproof_backend/apps/outbox/: admin.py  apps.py  exceptions.py  models.py  publishers.py  services.py  tasks.py
backend/src/agentproof_backend/apps/outbox/migrations/: 0001_initial.py
backend/src/agentproof_backend/apps/projects/: admin.py  api.py  apps.py  exceptions.py  forms.py  models.py  permissions.py  selectors.py  serializers.py  services.py  urls.py  web.py  web_urls.py
backend/src/agentproof_backend/apps/projects/migrations/: 0001_initial.py  0002_alter_environment_options_alter_project_options_and_more.py
backend/src/agentproof_backend/apps/telemetry/: __init__.py  admin.py  apps.py  domain.py  envelopes.py  exceptions.py  forms.py  models.py  normalizers.py  selectors.py  services.py  validation.py  web.py  web_urls.py
backend/src/agentproof_backend/apps/telemetry/migrations/: 0001_initial.py
backend/src/agentproof_backend/config/: asgi.py  celery.py  env.py  logging.py  urls.py  wsgi.py
backend/src/agentproof_backend/config/settings/: base.py  local.py  production.py  test.py
backend/src/agentproof_backend/templates/: base.html
backend/src/agentproof_backend/templates/datasets/: case_form.html  dataset_detail.html  dataset_list.html  import_detail.html  trace_case_form.html  version_detail.html
backend/src/agentproof_backend/templates/projects/: environment_detail.html  project_detail.html  project_list.html
backend/src/agentproof_backend/templates/telemetry/: trace_detail.html  trace_list.html
backend/tests/: organization_helpers.py  test_accounts.py  test_api_keys.py  test_audit_events.py  test_dataset_web.py  test_datasets.py  test_health.py  test_ingestion.py  test_organization_api.py  test_organization_services.py  test_outbox.py  test_phase_1_smoke.py  test_projects.py  test_request_id.py  test_status_api.py  test_telemetry.py  test_trace_explorer.py
docs/adr/: ADR-002-django-bootstrap.md  ADR-003-multi-tenant-organizations.md  ADR-004-projects-and-environments.md  README.md  (+5 more)
examples/: sample_agent.py
(+3 files in other folders)
