[project]
name = "agentproof"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "celery-types>=0.26.0",
    "pyrefly>=0.60.0",
]

[tool.uv.workspace]
members = [
    "backend",
    "packages/python-sdk",
]

[dependency-groups]
dev = [
    "detect-secrets>=1.5.0",
    "django-stubs>=6.0.5",
    "djangorestframework-stubs>=3.17.0",
    "factory-boy>=3.3.3",
    "hypothesis>=6.155.7",
    "mkdocs-material>=9.7.6",
    "mypy>=2.1.0",
    "pip-audit>=2.10.1",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "pytest-django>=4.12.0",
    "respx>=0.23.1",
    "ruff>=0.15.18",
    "testcontainers>=4.14.2",
    "time-machine>=3.2.0",
]

[tool.ruff]
target-version = "py313"
line-length = 120
extend-exclude = [
    ".venv",
    "dist",
    "build",
    "**/migrations/**",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "C4",
    "SIM",
    "ASYNC",
    "ANN",
    "ARG",
    "PTH",
    "RUF",
    "S",
    "DJ",
    "PT",
]
ignore = [
    "ANN401",
]

[tool.ruff.lint.per-file-ignores]
"**/config/settings/*.py" = [
    "F403",
    "F405",
]
"**/tests/**/*.py" = [
    "S101",
    "S105",
    "S106",
]
"**/migrations/**/*.py" = [
    "ANN",
    "RUF012",
    "E501"
]

[tool.ruff.lint.isort]
known-first-party = [
    "agentproof",
    "agentproof_backend",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["mypy_django_plugin.main"]
pretty = true
show_error_codes = true
show_column_numbers = true
warn_unreachable = true
mypy_path = [
    "backend/src",
    "packages/python-sdk/src",
]
exclude = [
    ".venv",
    "dist",
    "build",
    "migrations",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "agentproof_backend.config.settings.test"
testpaths = [
    "backend/tests",
    "packages/python-sdk/tests",
]
python_files = [
    "test_*.py",
]
addopts = [
    "-ra",
    "--strict-config",
    "--strict-markers",
    "--import-mode=importlib",
    "--cov=agentproof",
    "--cov=agentproof_backend",
    "--cov-report=term-missing",
]
markers = [
    "integration: tests requiring external infrastructure",
    "slow: tests that take longer than normal unit tests",
]

[tool.coverage.run]
branch = true
source = [
    "agentproof",
    "agentproof_backend",
]
omit = [
    "**/migrations/**",
    "**/tests/**",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@overload",
]

[tool.coverage.html]
directory = "coverage_html"

[tool.django-stubs]
django_settings_module = "agentproof_backend.config.settings.test"

[[tool.mypy.overrides]]
module = [
    "agentproof_backend.config.settings.*",
]
ignore_errors = true
