[project]
name = "agentproof-backend"
version = "0.1.0"
authors = [
    { name = "Siddharth Kundu", email = "sk31395@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "argon2-cffi>=25.1.0",
    "celery[redis]>=5.6.3",
    "dj-database-url>=3.1.2",
    "django>=6.0,<6.1",
    "django-storages[s3]>=1.14.6",
    "djangorestframework>=3.17.1",
    "drf-spectacular>=0.29.0",
    "gunicorn>=26.0.0",
    "psycopg[binary,pool]>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "redis>=6.4.0",
    "structlog>=26.1.0",
    "uvicorn>=0.49.0",
    "whitenoise>=6.12.0",
]

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"
